<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/connectAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_address_setting"
            />
        <Button
            android:id="@+id/getStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_status"
            />
        <Button
            android:id="@+id/getProgram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_program"
            />
        <Button
            android:id="@+id/programManagement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/program_management"
            />
        <!--<Button-->
            <!--android:id="@+id/setting"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/setting"-->
            <!--/>-->
    </LinearLayout>
</RelativeLayout>
